source/main/resources/xenon.css
/* ... */
.fps-monitor-label {
    -fx-padding: 0.5mm 1mm 0.5mm 1mm;
}

/*******************************************************************************
 * About Tool
 ******************************************************************************/
#tool-about .text-area {
    -fx-background-color: transparent;
}

#tool-about .label {
    -fx-padding: -0.25em;
}

#tool-about .tool-about-title {
    -fx-font-size: 5em;
}

#tool-about .tool-about-header {
    -fx-font-size: 2em;
}

#tool-about .tool-about-name {
    -fx-font-size: 1em;
}

#tool-about .tool-about-provider {
    -fx-font-size: 1em;
}

#tool-about .tool-about-version {
    -fx-font-size: 1em;
}

#tool-about-details {
    -fx-font: 1em monospaced;
}

#tool-about-mods {
    -fx-font: 1em monospaced;
}

/*******************************************************************************
 * New Asset Tool
 ******************************************************************************/
#tool-asset-new .asset-type-tile {
    -fx-min-width: 250px;
    -fx-min-height: 200px;
    -fx-max-width: 250px;
    -fx-max-height: 200px;
    -fx-background-color: -ex-background-text;
    -fx-background-insets: 10px;

    -fx-border-color: -ex-background-tabs;
    -fx-border-style: solid;
    -fx-border-insets: 5px;
    -fx-border-width: 5px;
}

#tool-asset #user-notice {
    -fx-background-color: -ex-background-error;
}

/*******************************************************************************
 * Fault Tool
 ******************************************************************************/
#tool-fault .text-area {
    -fx-background-color: transparent;
}

#tool-fault-text {
    -fx-font: 1em monospaced;
}

/*******************************************************************************
 * Product Tool
 ******************************************************************************/
#tool-product-page-header {
    -fx-background-insets: 0 0 1mm 0;
    -fx-background-color: -ex-background-text;
    -fx-padding: 1mm 1mm 2mm 1mm;
}

#tool-product-page-title {
    -fx-font-size: 2em;
}

#tool-product-page-header-buttons {
    -fx-spacing: 1mm;
}

#tool-product-artifact {
    -fx-background-color: -ex-background-text;
    -fx-padding: 1mm;
}

#tool-product-artifact-name {
    -fx-font-weight: bold;
}

#tool-product-market {
    -fx-background-color: -ex-background-text;
    -fx-padding: 1mm;
}

#tool-product-market-name {
    -fx-font-weight: bold;
}

#tool-product-page-footer {
    -fx-background-insets: 1mm 0 0 0;
    -fx-background-color: -ex-background-text;
    -fx-padding: 2mm 1mm 1mm 1mm;
}

.tool-product-message {
    -fx-background-color: -ex-background-text;
    -fx-padding: 5mm;
    -fx-alignment: center;
    -fx-font-size: 2em;
}

/*******************************************************************************
 * Welcome Tool
 ******************************************************************************/
#tool-welcome {
    -fx-background-color: transparent;
}

#tool-welcome .tool-welcome-title {
    -fx-font-size: 5em;
}

#tool-welcome .buttons {
    -fx-padding: 3em;
    -fx-hgap: 3em;
    -fx-vgap: 3em;
}

#tool-welcome .button .title {
    -fx-font-size: 2.5em;
}

#tool-welcome .button .description {
    -fx-font-size: 1em;
}

/*******************************************************************************
 * Tool Pane
 ******************************************************************************/
.tool-pane {
    -fx-background-color: transparent;
}

.tool-pane-header-area {
    -fx-background-color: -ex-background-tabs;
    -fx-spacing: 0.5mm;
}

.tool-pane-header-area .box {
    -fx-spacing: 0;
}

.tool-pane-content-area {
    -fx-background-color: transparent;
}

/*******************************************************************************
 * Tool Tab
 ******************************************************************************/
.tool-pane .tool-tab {
    -fx-padding: 0.5mm 0.5mm 0.5mm 0.5mm;
    -fx-background-color: -ex-background-text;
}

.tool-pane .tool-tab:hover {
    -fx-background-color: -ex-background-tags;
}

.tool-pane .tool-tab .tool-tab-icon {
    -fx-padding: 0 1mm 0 0;
}

.tool-pane .tool-tab .tool-tab-label {
    -fx-text-fill: -fx-text-base-color;
}

.tool-pane .tool-tab .tool-tab-context-icon {
    -fx-padding: 0 0 0 1mm;
}

.tool-pane .tool-tab .tool-tab-close {
    -fx-background-color: transparent;
    -fx-padding: 0 0 0 1mm;
}

.tool-pane:active .tool-tab:selected {
    -fx-padding: 0.5mm 0.5mm 0 0.5mm;
    -fx-border-width: 0 0 0.5mm 0;
    -fx-border-color: derive(-fx-focus-color, 20%);
    -fx-background-color: -ex-background-note;
}

.tool-pane:active .tool-tab:selected:hover {
    -fx-border-color: derive(-fx-focus-color, 40%);
    -fx-background-color: -ex-background-note;
}

/*******************************************************************************
 * Work Pane
 ******************************************************************************/
.workpane .drop-hint {
    -fx-fill: -ex-workspace-drop-hint;
}

